Fix search box alignment in list view

--- a/themes/standard/css/grid.css
+++ b/themes/standard/css/grid.css
@@ -20,7 +20,7 @@
 {
 	font-size: 0.9em;
 	border: 1px white solid;
-	padding: 0.3em;
+	padding: 0.3em 0;
 }
 
 .grid-view table.items th
@@ -122,5 +122,10 @@
 .grid-view .filters select
 {
 	width: 100%;
+	max-width: 100%;
 	border: 1px solid #ccc;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
 }
